# IoT-Embedded

./: .gitignore  LICENSE  README.md  cmd.exe.lnk
arduino/: .gitignore  README.md
arduino/BME280_basic/: BME280_basic.ino
arduino/ESP32S3/: ESP32S3.ino
arduino/ESP32S3_BLE_WIFI_MQTT_BME280/: ESP32S3_BLE_WIFI_MQTT_BME280.ino  mqtt_config.h
arduino/ESP32S3_all/: ESP32S3_all.ino  ble_config.h
arduino/ESP32_CAM_CameraWebServer/: ESP32_CAM_CameraWebServer.ino
esp-idf/: readme.md
esp-idf/3-Level-Cloud/: .gitignore  directory_structure.txt  readme.md
esp-idf/3-Level-Cloud/esp32-face-detect/: .gitignore  CMakeLists.txt  menuconfig settings discussion.txt  sdkconfig
esp-idf/3-Level-Cloud/esp32-face-detect-websocket/: menuconfig settings discussion.txt  partitions.csv  readme.md  sdkconfig.old
esp-idf/3-Level-Cloud/esp32-face-detect-websocket-client/: CMakeLists.txt  menuconfig settings discussion.txt  partition and size discussion.txt  readme.md  sdkconfig  websocket_send _mage_discussion.txt
esp-idf/3-Level-Cloud/esp32-face-detect-websocket-client/main/: CMakeLists.txt  app_main.cpp  websocket_client.cpp  websocket_client.h  wifi.c  wifi.h
esp-idf/3-Level-Cloud/esp32-face-detect-websocket-client/main/ABANDONED/: app_main - ABANDONED.cpp  app_main - STABLE.cpp  websocket_client - ABANDONED.cpp  websocket_client -ABANODNED.h
esp-idf/3-Level-Cloud/esp32-face-detect-websocket/main/: CMakeLists.txt  app_main.cpp  secret.h
esp-idf/3-Level-Cloud/esp32-face-detect/main/: CMakeLists.txt
esp-idf/3-Level-Cloud/esp32-s3-websocket_server/: CMakeLists.txt  dependencies.lock.esp32s3  readme all new things.txt  readme.md  sdkconfig  websocket_client.html
esp-idf/3-Level-Cloud/esp32-s3-websocket_server/certificates/: esp32-wroom-1-George.public.key  new_certificate.pem  new_certificate_request.csr  new_private.key  private.key
esp-idf/3-Level-Cloud/esp32-s3-websocket_server/main/: CMakeLists.txt  app_diagnostics.c  app_diagnostics.h  config.h  face_database.c  face_database.h  face_recognizer.cpp  face_recognizer.hpp  faces.json  idf_component.yml  image_processor.cpp  image_processor.h  main.c  mqtt.c  mqtt.h  storage_manager.c  storage_manager.h  websocket_server - ABANDONED.c  websocket_server.c  websocket_server.h  wifi.c  wifi.h
esp-idf/BACKUP/esp-face-rec-BAK-NOT2BEUSED/esp32-cam/main/: CMakeLists.txt  camera.h  config.h  main.c  wifi.c  wifi.h
esp-idf/BACKUP/esp-face-rec-BAK-NOT2BEUSED/esp32-s3/main/: CMakeLists.txt  config.h  main.c  mqtt.c
esp-idf/esp-face-rec/esp32-cam/: readme.md
esp-idf/esp-face-rec/esp32-s3/: CMakeLists.txt
esp-idf/esp32-cam/: .gitignore  sdkconfig.old  sdkconfig.txt
esp-idf/esp32-cam-face/: .gitignore  CMakeLists.txt
esp-idf/esp32-cam-face/main/: CMakeLists.txt  camera.c  camera.h  debug.c  debug.h  face_detection.c  face_detection.h  http.c  http.h  idf_component.yml  main.c  system_init.c  system_init.h
esp-idf/esp32-cam-minimal/: .gitignore  CMakeLists.txt  readme.md  sdkconfig
esp-idf/esp32-cam-minimal/main/: CMakeLists.txt  main.c
esp-idf/esp32-cam-webPage/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp-idf/esp32-cam-webPage-faceDetect/: CMakeLists.txt  readme.md  sdkconfig  sdkconfig.old
esp-idf/esp32-cam-webPage-faceDetect/main/: CMakeLists.txt  app_main - Original.cpp  app_main.cpp  secret.h  wifi.c  wifi.h
esp-idf/esp32-cam-webPage/main/: CMakeLists.txt  camera.c  debug.c  debug.h  http.c  idf_component.yml  main.c  wifi.c
esp-idf/esp32-cam/main/: CMakeLists.txt  main.c  wifi.c  wifi.h
esp-idf/esp32-face-detect/: readme.md  sdkconfig.old
esp-idf/esp32-face-detect-websocket/: CMakeLists.txt  partition and size discussion.txt  readme.md
esp-idf/esp32-face-detect-websocket/main/: CMakeLists.txt  websocket_client.c  websocket_client.h
esp-idf/esp32-face-detect/main/: CMakeLists.txt  app_main.cpp
esp-idf/esp32-s3-face-recogn/: CMakeLists.txt  partitions.csv  readme.md  sdkconfig
esp-idf/esp32-s3-face-recogn/main/: CMakeLists.txt  app_main.cpp  face_recognition - 1st-functional.cpp  face_recognizer.cpp  face_recognizer.hpp  idf_component.yml  image_processor.cpp  image_processor.hpp  readme.md
esp-idf/esp32-s3-websocket_server/: readme.md
esp-idf/esp32-s3-websocket_server/main/: config.h  mqtt.h  readme.md  websocket_server.h
esp-idf/esp32-s3-wroom-1/: CMakeLists.txt  readme.md
esp-idf/esp32-s3-wroom-1/main/: CMakeLists.txt  bme280.c  bme280.c.bak.c  bme280.h  config.h  main.c  mqtt.c  mqtt.h  wifi.c
(+13 files in other folders)
